--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,6 +14,12 @@ body{
     color: white;
 }
 
+h2, h3, label{
+    text-align: center;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
+
 .accesos
 {
     width: 80%;
@@ -47,7 +53,8 @@ body{
 
 .marco
 {
-    width: 65%;
-    height: 30%;
-    border: 10px solid white;
+    width: 80%;
+    height: 180px;
+    border: 10px solid rgb(251, 255, 0);
+    margin-bottom: 10px;
 }
