--- a/css/estilob.css
+++ b/css/estilob.css
@@ -1,9 +1,9 @@
 .map{
-    width: 100%;
-    border: 10px solid white;
+    width: 90%;
+    border: 10px solid rgb(251, 255, 0);
+    height: 90%;
 }
 
 .imgenlace{
-    
-    align-items: center;
+    width: 90%;
 }
