--- a/css/estilo.css
+++ b/css/estilo.css
@@ -54,7 +54,14 @@ h2, h3, label{
 .marco
 {
     width: 80%;
-    height: 180px;
+    height: 15%;
     border: 10px solid rgb(251, 255, 0);
     margin-bottom: 10px;
+}
+
+@media(min-width: 525px)
+{
+    .marco{
+        height: 20%;
+    }
 }
