--- a/css/estilo.css
+++ b/css/estilo.css
@@ -45,6 +45,7 @@ h2, h3, label{
     transition: all 0.5s;
 }
 
+
 .dat
 {
     width: 50%;
@@ -59,7 +60,7 @@ h2, h3, label{
     margin-bottom: 10px;
 }
 
-@media(min-width: 525px)
+@media(min-width: 525px) and (max-width: 799px)
 {
     .marco{
         height: 20%;
