--- a/css/estilob.css
+++ b/css/estilob.css
@@ -2,8 +2,18 @@
     width: 90%;
     border: 10px solid rgb(251, 255, 0);
     height: 90%;
+    margin: auto;
 }
 
 .imgenlace{
     width: 90%;
+    text-align: center;
+}
+
+
+@media(min-width: 800px)
+{
+    .map{
+        width: 80%;
+    }
 }
