--- a/css/estilob.css
+++ b/css/estilob.css
@@ -5,6 +5,12 @@
     margin: auto;
 }
 
+.logo
+{
+    height: 20%;
+    width: 60%;
+}
+
 .imgenlace{
     width: 90%;
     text-align: center;
@@ -15,5 +21,19 @@
 {
     .map{
         width: 80%;
+    }
+
+    .logo
+    {
+        width: auto;
+        height: auto;
+    }
+}
+
+@media(max-width: 799px)
+{
+    .logo{
+        width: 100%;
+        height: auto;
     }
 }
