--- a/css/estiloc.css
+++ b/css/estiloc.css
@@ -9,6 +9,7 @@ body{
 
 main{
     width: 100%;
+    justify-content: center;
 }
 
 nav{
@@ -16,12 +17,22 @@ nav{
     display: flex;
     justify-content: center;
     font-family: 'Courier New', Courier, monospace;
-    height: 100px;
+    height: 130px;
     width: 100%;
+    margin-bottom: 10px;
+}
+
+.seccion
+{
+  width: 80%;
+  margin: auto;
+  display: flex;
 }
 
 .logo{
-    width: 15%;
+    margin: 5px;
+    width: 9%;
+    height: 90%;
 }
 
 .dropbtn {
@@ -31,22 +42,23 @@ nav{
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 100%;
   }
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: relative;
-    display: inline-block;
+    width: 50%;
   }
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    width: 100%;
   }
   
   /* Links inside the dropdown */
@@ -68,4 +80,9 @@ nav{
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
+  }
+
+  .mapa
+  {
+    width: 50%;
   }
