--- a/css/estiloc.css
+++ b/css/estiloc.css
@@ -31,7 +31,7 @@ nav{
 
 .logo{
     margin: 5px;
-    width: 9%;
+    width: 12%;
     height: 90%;
 }
 
@@ -47,7 +47,9 @@ nav{
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    width: 50%;
+    width: 35%;
+    margin: 0 5%;
+    overflow: auto;
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -73,7 +75,7 @@ nav{
   .dropdown-content a:hover {background-color: #f1f1f1}
   
   /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+  .dropdown:hover .dropdown-content{
     display: block;
   }
   
@@ -82,7 +84,12 @@ nav{
     background-color: #3e8e41;
   }
 
-  .mapa
+  .mapadiv
   {
     width: 50%;
+  }
+
+  .mapa
+  {
+    width: 100%;
   }
