--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,6 +2,8 @@ body{
     background-color: rgb(33, 112, 204);
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
 }
