--- a/css/estiloc.css
+++ b/css/estiloc.css
@@ -31,8 +31,8 @@ nav{
 
 .logo{
     margin: 5px;
-    width: 12%;
-    height: 90%;
+    width: 170px;
+    height: 120px;
 }
 
 .dropbtn {
@@ -92,4 +92,28 @@ nav{
   .mapa
   {
     width: 100%;
+  }
+
+  @media(max-width: 799px)
+  {
+    .logo
+    {
+        width: auto;
+    }
+
+    .seccion
+    {
+      display: flex;
+      flex-flow: wrap-reverse;
+    }
+
+    .mapadiv{
+      width: 96%;
+      margin: 2%;
+    }
+
+    .dropdown
+    {
+      width: 100%;
+    }
   }
